; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/trunk_mgr/extr_trunk_sync.c_trunk_sync_destroy.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/trunk_mgr/extr_trunk_sync.c_trunk_sync_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@trunk_binlog_fd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trunk_sync_destroy() #0 {
  %1 = load i32, i32* @trunk_binlog_fd, align 4
  %2 = icmp sge i32 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = call i32 @trunk_binlog_fsync(i32 1)
  %5 = load i32, i32* @trunk_binlog_fd, align 4
  %6 = call i32 @close(i32 %5)
  store i32 -1, i32* @trunk_binlog_fd, align 4
  br label %7

7:                                                ; preds = %3, %0
  ret i32 0
}

declare dso_local i32 @trunk_binlog_fsync(i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
